[project]
name = "uneven-amplitude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.1",
    "mat4py>=0.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
]
